; ModuleID = '/home/carl/AnghaBench/toxcore/auto_tests/extr_tox_test.c_print_group_message.c'
source_filename = "/home/carl/AnghaBench/toxcore/auto_tests/extr_tox_test.c_print_group_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"Install Gentoo\00", align 1
@num_recv = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_group_message(i32* %0, i32 %1, i32 %2, i32* %3, i32 %4, i8* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  store i8* %5, i8** %12, align 8
  %13 = load i8*, i8** %12, align 8
  %14 = bitcast i8* %13 to i32*
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 234212
  br i1 %16, label %17, label %18

17:                                               ; preds = %6
  br label %29

18:                                               ; preds = %6
  %19 = load i32, i32* %11, align 4
  %20 = sext i32 %19 to i64
  %21 = icmp eq i64 %20, 14
  br i1 %21, label %22, label %29

22:                                               ; preds = %18
  %23 = load i32*, i32** %10, align 8
  %24 = call i64 @memcmp(i32* %23, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 14)
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %22
  %27 = load i32, i32* @num_recv, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* @num_recv, align 4
  br label %29

29:                                               ; preds = %17, %26, %22, %18
  ret void
}

declare dso_local i64 @memcmp(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
